Updated Dashboard Active Links Logic

--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -3140,3 +3140,16 @@ h5.guest-title {
     height: 400px !important;
 }
 
+/* Added By Khalil */
+
+/* Footer Uls */
+    /* ul.footer-ul {
+        padding-left: 0px;
+    } */
+
+    /* .deal-card {
+        height: auto;
+    } */
+/* Footer Uls */
+
+/* Added By Khalil */
