--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -3143,13 +3143,13 @@ h5.guest-title {
 /* Added By Khalil */
 
 /* Footer Uls */
-    /* ul.footer-ul {
+    ul.footer-ul {
         padding-left: 0px;
-    } */
+    }
 
-    /* .deal-card {
+    .deal-card {
         height: auto;
-    } */
+    }
 /* Footer Uls */
 
 /* Added By Khalil */
